# fitm-hackaton-2022

./: .env_dev  .gitignore  README.md  docker-compose.yaml  docker-compose.yml
analytics/: analytics.ipynb
backend/: alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: e9f1bed1a9cf_create_account_table.py
backend/components/: auth.py
backend/core/: config.py  security.py
backend/db/: __init__.py  base.py  users.py
backend/models/: signindto.py  signupdto.py  user.py  usermodel.py
backend/routers/: auth.py
backend/services/: auth.py  db_user.py
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docker/traefik/: Dockerfile.traefik
docker/web/: Dockerfile.prod
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: auth.ts  axios.ts
frontend/src/components/: Container.vue  HelloWorld.vue  Paper.vue  Slider.vue  SliderContainer.vue  index.ts
frontend/src/components/forms/: SignInForm.vue  SignUpForm.vue  SignUpFormMobile.vue
frontend/src/models/: auth.ts  user.ts
frontend/src/pages/: Analytics.vue  MainPage.vue  NotFound.vue  Settings.vue  SignIn.vue  SignUp.vue
frontend/src/router/: router.ts
nginx/: backend.conf
traefik-public-certificates/: acme.json
