[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Nikita Nakleskin <nakleskin.nv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
psycopg2-binary = "^2.9.5"
databases = {extras = ["postgres"], version = "^0.6.2"}
asyncpg = "^0.27.0"
alembic = "^1.8.1"
pydantic = "^1.10.2"
starlette-api = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
